--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Schools Sports Day Function</h1>
 
-
+     <span>Kindly check the console tab in inspect option to see all the optput</span>
     <script src="./code.js"></script>
 </body>
 </html>
